# osmolytes

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
osmolytes/: __init__.py  _version.py  energy.py  main.py  pqr.py  sasa.py
osmolytes/data/: creamer-areas.yaml  denatured-areas.yaml  transfer-energies.yaml  tripeptide-areas.yaml
tests/: test_energy.py  test_output.py  test_pqr.py  test_sasa.py  test_sphere.py
tests/data/: sphere.pqr
tests/data/alkanes/: alkanes.json
tests/data/proteins/: 1A6F.pqr  1OVA.pqr  1STN.pqr  2BU4.pqr  2PTN.pqr  Auton-Bolen.yaml  NikR-apbs.in  NikR-apbs.out  NikR.json  NikR_chains.pqr  NikR_no-chains.pqr  apbs_to_json.py
